# kryptoke

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  run-backend.sh  run-frontend.sh  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 3f8f86f0df5e_initial_data_models.py  dad579b4bb82_added_new_models.py
backend/app/: main.py
backend/app/api/routes/: alerts.py  auth.py  markets.py  mpesa.py  notifications.py  orders.py  portfolio.py  users.py  wallets.py  watchlist.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: models.py
backend/app/repos/: asset_repo.py  base.py  order_repo.py  portfolio_repo.py  user_repo.py  wallet_repo.py
backend/app/services/: auth_service.py  market_service.py  mpesa_service.py  portfolio_service.py  price_simulator.py  trading_service.py  wallet_service.py
frontend/: next.config.mjs  openapi-ts.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/dashboard/: KycBanner.tsx
frontend/src/components/landing/: AuthModal.tsx
frontend/src/components/layout/: BottomNav.tsx  Header.tsx  NotificationBell.tsx  Sidebar.tsx
frontend/src/components/providers/: AuthProvider.tsx  (+2 more)
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
scripts/: backend-setup.sh  dev.sh  quickstart-no-docker.sh
(+25 files in other folders)
